test/zinc_source/compile_errors/enums/06_payload_variant_pattern_shape.zn
// expected-error: payload variant 'Message.Move' requires a field pattern
enum Message {
    Move { x: i32, y: i32 }
}

fn main() {
    msg = Message.Move { x: 1, y: 2 }
    match msg {
        Message.Move => {
            print("bad")
        },
    }
}
